--- a/main/Dockerfile
+++ b/main/Dockerfile
@@ -2,6 +2,8 @@ FROM maven:3.8.4-openjdk-17 AS java-build
 
 WORKDIR /app
 
-COPY main/target/main-0.0.1-SNAPSHOT.jar /app/app.jar
+COPY main/ /app/
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+RUN mvn clean install
+
+ENTRYPOINT ["java", "-jar", "target/main-0.0.1-SNAPSHOT.jar"]
