--- a/messaging2/Dockerfile
+++ b/messaging2/Dockerfile
@@ -2,6 +2,8 @@ FROM maven:3.8.4-openjdk-17 AS java-build
 
 WORKDIR /app
 
-COPY messaging2/target/messaging2-0.0.1-SNAPSHOT.jar /app/app.jar
+COPY messaging2/ /app/
 
-ENTRYPOINT ["java", "-jar", "app.jar"]
+RUN mvn clean install
+
+ENTRYPOINT ["java", "-jar", "target/messaging2-0.0.1-SNAPSHOT.jar"]
