--- a/messaging2/src/main/resources/application.properties
+++ b/messaging2/src/main/resources/application.properties
@@ -6,8 +6,11 @@ spring.rabbitmq.port=5672
 spring.rabbitmq.username=root
 spring.rabbitmq.password=root
 
-## VARIABLES
-rabbit.messaging1.queue.name=user.messaging2
+# VARIABLES
+rabbit.messaging1.queue.name=user.messaging1
+rabbit.messaging2.queue.name=user.messaging2
+rabbit.messaging1.exchange.name=user.messaging1.ex
+rabbit.messaging2.exchange.name=user.messaging2.ex
 
 # DATABASE
 spring.datasource.url=jdbc:postgresql://localhost:5432/messaging
